* Added rcov task and updated unit testing for better code coverage.
* Fixed some bugs where the application object was going to the global
  appliation instead of using its own data.
* Added square and curly bracket patterns to FileList#include (Tilman Sauerbeck).
* Added plain filename support to rule dependents (suggested by Nobu Nakada).
* Added pathmap support to rule dependents.

== Version 0.7.1

* Added optional filter parameter to the --tasks command line option.
* Added flatten to allow rule transform procs to return lists of
  prereqs (Joel VanderWerf provided patch).
* Added pathmap to String and FileList.
* The -r option will now load .rake files (but a straight require
  doesn't yet).  NOTE: This is experimental ... it may be
  discontinued.
* The -f option without a value will disable the search for a
  Rakefile.  The assumption is that the -r files are adequate.
* Fixed the safe_ln function to fall back to cp in more error
  scenarios.

== Version 0.7.0

* Added Rake.original_dir to return the original starting directory of
  the rake application.
* Added safe_ln support for openAFS (from Ludvig Omholt).
* Added --trace reminder on short exception messages (David Heinemeier
  Hansson suggestion).
* Added multitask declaration that executes prerequisites in
  parallel. (Doug Young providied an initial implementation).
* Fixed missing_const hack to be compatible with Rails. (Jamis Buck
  supplied test case).
* Made the RDoc task default to internal (in-process) RDoc formatting.
  The old behavior is still available by setting the +external+ flag
  to true.
* Rakefiles are now loaded with the expanded path to prevent
  accidental polution from the Ruby load path.
* The +namespace+ command now returns a NameSpace object that can be
  used to lookup tasks defined in that namespace.  This allows for
  better anonymous namespace behavior.
* Task objects my now be used in prerequisite lists directly.

== Version 0.6.1

* Rebuilt 0.6.0 gem without signing.
